tests/diagnostics/cases/types/02_let_type_mismatch_int_to_string.home
// Type mismatch with helpful suggestion to use .toString().
fn main() {
    let s: string = 42
}
